fix dropdown being cut off on full size pages

--- a/src/app/_components/PortalComponents/Pagination/index.module.scss
+++ b/src/app/_components/PortalComponents/Pagination/index.module.scss
@@ -115,6 +115,7 @@
     0 2px 4px -2px rgb(0 0 0 / 0.1);
   z-index: 999;
   height: fit-content;
+  max-height: 137px;
   overflow-y: scroll;
 
   .pageOption {
